Пофиксил баги для мобильной версии(отличается от DevTools), поправил иконки соцсетей, поправил hover для десктопной версии кноки меню, поправил поддержку свойства gap для не-хромиум браузра

--- a/src/pug/sections/_enter.pug
+++ b/src/pug/sections/_enter.pug
@@ -1,6 +1,6 @@
 section.enter(style="padding-top: 13px")
     .enter__wrapper
-        video(autoplay muted loop preload).enter__background
+        video(autoplay muted loop preload poster="img/coverflow.png").enter__background
             source(src='video/digital_wave_background_01.webm' type="video/webm")
             source(src="video/Digital_Wave_Background_01.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"')
         h1 Цифровая среда РГСУ
