--- a/src/pug/sections/dashboard/_hotels.pug
+++ b/src/pug/sections/dashboard/_hotels.pug
@@ -14,8 +14,8 @@ section.hotels
                         h3.hotels__tab-title Заявка на опоздание
                     form.hotels__form.form__late
                         .hotels__form-wrapper
-                            label.hotels__form-label(for="date") Дата
-                            input(type="date" name="date" id="date").hotels__form-input
+                            label.hotels__form-label(for="datepicker") Дата
+                            input(type="date" name="datepicker" id="datepicker").hotels__form-input
                         .hotels__form-wrapper
                             label.hotels__form-label(for="time") Время
                             input(type="time" name="time" id="time").hotels__form-input
