--- a/src/scss/blocks/_modal.scss
+++ b/src/scss/blocks/_modal.scss
@@ -1,162 +1,236 @@
 .modal {
-  background: #fff;
-  z-index: 999;
-  position: fixed;
-  width: 401px;
-  min-height: 371px;
-  top: 25%;
-  left: 50%;
-  margin: 0 auto;
-  margin-left: -200px;
-  display: none;
-  @media (max-width: $mobile) {
-    max-width: 90%;
-    margin-left: -45%;
-  }
+    background: #fff;
+    z-index: 999;
+    position: fixed;
+    width: 401px;
+    min-height: 371px;
+    top: 25%;
+    left: 50%;
+    margin: 0 auto;
+    margin-left: -200px;
+    display: none;
+    @media (max-width: $mobile) {
+        max-width: 90%;
+        margin-left: -45%;
+    }
 }
 
 .modal--active {
-  display: block;
-  animation: fadeIn .8s;
+    display: block;
+    animation: fadeIn 0.8s;
 }
 
 .modal__close {
-  @include btn-reset;
-  font-size: 0;
-  position: absolute;
-  content: '';
-  display: block;
-  border: 1px solid #C3CAD6;
-  box-sizing: border-box;
-  width: 32px;
-  height: 32px;
-  background-color: #fff;
-  top: 12px;
-  right: 12px;
-  border-radius: 50%;
-  transition: .5s;
-  &::after,&::before {
+    @include btn-reset;
+    font-size: 0;
     position: absolute;
-    width: 15px;
-    height: 1px;
-    content: '';
+    content: "";
     display: block;
-    transform: rotate(45deg);
-    background-color: #c3cad6;
-    right: 7px;
-  }
-  &::after {
-    transform: rotate(-45deg);
-    animation: rotateToX 0.5s ease-in-out;
-  }
-  &::before {
-    animation: rotateToY 0.5s ease-in-out;
-  }
-  &:hover {
-    background-color: $c-blue;
-    transform: rotate(360deg);
-    border: none;
-    &::after,&::before {
-      background: $c-light;
-      right: 8px;
+    border: 1px solid #c3cad6;
+    box-sizing: border-box;
+    width: 32px;
+    height: 32px;
+    background-color: #fff;
+    top: 12px;
+    right: 12px;
+    border-radius: 50%;
+    transition: 0.5s;
+    &::after,
+    &::before {
+        position: absolute;
+        width: 15px;
+        height: 1px;
+        content: "";
+        display: block;
+        transform: rotate(45deg);
+        background-color: #c3cad6;
+        right: 7px;
     }
-  }
+    &::after {
+        transform: rotate(-45deg);
+        animation: rotateToX 1.5s ease-in-out;
+    }
+    &::before {
+        animation: rotateToY 1.5s ease-in-out;
+    }
+    &:hover {
+        background-color: $c-blue;
+        transform: rotate(360deg);
+        border: none;
+        &::after,
+        &::before {
+            background: $c-light;
+            right: 8px;
+        }
+    }
 }
 
 .modal__title {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 26px;
-  line-height: 26px;
-  color: #3464e0;
-  text-align: center;
-  margin-top: 38px;
-  margin-bottom: 21px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 26px;
+    line-height: 26px;
+    color: #3464e0;
+    text-align: center;
+    margin-top: 38px;
+    margin-bottom: 21px;
 }
 
 .modal__form {
-  display: flex;
-  flex-direction: column;
-  margin-left: 30px;
-  margin-right: 30px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .form__label {
-  display: block;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 26px;
-  color: #444444;
-  margin-bottom: 6px;
-  &::after {
-    content: ' *';
-    color: #e06364;
-  }
-}
-
-.form__input {
-  border: 1px solid #f1f4f9;
-  box-sizing: border-box;
-  border-radius: 4px;
-  width: 100%;
-  padding: 9px 63px 9px 18px;
-  height: 46px;
-  &::placeholder,
-  &:placeholder-shown {
+    display: block;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 26px;
-    color: #c3cad6;
-  }
-  &:placeholder-shown {
-    padding: 9px 63px 9px 18px;
-  }
+    color: #444444;
+    margin-bottom: 6px;
+    &::after {
+        content: " *";
+        color: #e06364;
+    }
+}
+
+.form__input {
+    border: 1px solid #f1f4f9;
+    box-sizing: border-box;
+    border-radius: 4px;
+    width: 100%;
+    padding: 9px 63px 9px 15px;
+    height: 46px;
+    &::placeholder,
+    &:placeholder-shown {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 26px;
+        color: #c3cad6;
+    }
+    &:placeholder-shown {
+        padding: 9px 63px 9px 15px;
+    }
 }
 
 .modal__form-group {
-  margin-bottom: 50px;
-  &--mail {
-    margin-bottom: 12px;
-  }
+    margin-bottom: 50px;
+    &--mail {
+        margin-bottom: 12px;
+    }
+    &--password {
+        position: relative;
+    }
+}
+
+.modal__checkbox-show {
+    position: absolute;
+    width: 15px;
+    height: 15px;
+
+    fill: rgba(#008ed6, 50%);
+
+    .closed-eye {
+        opacity: 0;
+        height: 0;
+    }
+}
+
+.modal__control-label--showpassword {
+    width: 32px;
+    text-align: right;
+    cursor: pointer;
+    position: absolute;
+    right: 30px;
+    top: 48px;
+}
+
+.modal__form-show {
+    display: none;
+    &:checked {
+        & ~ .form__input {
+            &--password {
+                text-security: disc;
+                -webkit-text-security: disc;
+            }
+        }
+        & ~ .modal__control-label--showpassword {
+            .modal__checkbox-show {
+                .closed-eye {
+                    opacity: 1;
+                    transition: opacity 300ms ease, height 400ms ease;
+                    width: 4px;
+                    height: 44px;
+                }
+            }
+        }
+    }
 }
 
 .modal__buttons {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .modal__enter {
-  margin-right: 21px;
+    margin-right: 21px;
 }
 
 .modal__sber {
-  @include btn-reset;
-  font-size: 0;
-  width: 46px;
-  height: 46px;
-  border-radius: 50%;
-  background: #2BC584 url("../img/sber.svg") no-repeat center;
-  background-size: 50%;
-  border: 1px solid #2BC584;
-  box-sizing: border-box;
-  margin-right: 36px;
+    @include btn-reset;
+    font-size: 0;
+    width: 46px;
+    height: 46px;
+    border-radius: 50%;
+    background: #2bc584 url("../img/sber.svg") no-repeat center;
+    background-size: 50%;
+    border: 1px solid #2bc584;
+    box-sizing: border-box;
+    margin-right: 36px;
 }
 
 .modal__error {
-  font-style: normal;
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 26px;
-  text-align: center;
-  color: $c-darkgrey;
-  transition: .2s;
-  position: relative;
-  padding-bottom: 0;
-  &:hover {
-    color: $c-blue;
-    border-bottom: 2px solid $c-blue;
-    padding-bottom: 5px;
-  }
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    color: $c-darkgrey;
+    transition: 0.2s;
+    position: relative;
+    padding-bottom: 0;
+    &:hover {
+        color: $c-blue;
+    }
+}
+
+
+@keyframes dash {
+    0% {
+        stroke-dashoffset: 0;
+        stroke-dasharray: 150.6 100.4;
+    }
+    50% {
+        stroke-dasharray: 1 250;
+    }
+    100% {
+        stroke-dashoffset: 502;
+        stroke-dasharray: 150.6 100.4;
+    }
+}
+
+@keyframes spinner-in {
+    0% {
+        opacity: 0;
+    }
+    20%, 80% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
