--- a/src/pug/sections/_portfolio-cards.pug
+++ b/src/pug/sections/_portfolio-cards.pug
@@ -205,7 +205,7 @@ section.portfolio-cards
                     h4.filter__title.title--aside Желаемая заработная плата
                     .filter__range.two-range-slider.js-two-range-slider
                         .two-range-slider__output
-                            output.two-range-slider__value.js-two-range-slider-min-value.two-range-slider__value--left.range-money
-                            output.two-range-slider__value.js-two-range-slider-max-value.two-range-slider__value--right.range-money
-                        input.two-range-slider__input.js-two-range-slider-input(type='range' min='0' max='250000' value='250000' step='10000').left-range
-                        input.two-range-slider__input.js-two-range-slider-input(type='range' min='0' max='250000' value='0' step='10000').left-range
+                            output.two-range-slider__value.js-two-range-slider-min-value.two-range-slider__value--left.range-money(style="left: 4%")
+                            output.two-range-slider__value.js-two-range-slider-max-value.two-range-slider__value--right.range-money(style="left: 88%")
+                        input.two-range-slider__input.js-two-range-slider-input(type='range' min='0' max='250000' value='220000' step='10000').left-range
+                        input.two-range-slider__input.js-two-range-slider-input(type='range' min='0' max='250000' value='10000' step='10000' style="left").left-range
