--- a/src/scss/blocks/_dashboard.scss
+++ b/src/scss/blocks/_dashboard.scss
@@ -161,7 +161,7 @@
     @include list-reset;
     flex-direction: column;
     display: none;
-    gap: 19px;
+    justify-content: space-between;
     &--active {
         display: flex;
     }
@@ -170,6 +170,10 @@
 .dashboard__menu-item {
     box-sizing: border-box;
     position: relative;
+    margin-bottom: 19px;
+    &:last-child {
+        margin-bottom: 0;
+    }
 }
 
 .dashboard__menu-link {
@@ -290,7 +294,6 @@
     flex-wrap: wrap;
     flex-direction: column;
     align-items: flex-start;
-    gap: 31px;
     width: 100%;
     @media (min-width: $tablet) {
         flex-direction: row;
