--- a/src/scss/blocks/_hotels.scss
+++ b/src/scss/blocks/_hotels.scss
@@ -53,6 +53,9 @@
     &#reason {
         width: 461px;
         margin-right: 0;
+        @media (max-width: $mobile) {
+            width: auto;
+        }
     }
     &[type="date"]::-webkit-calendar-picker-indicator {
         color: transparent;
