--- a/src/scss/blocks/_select.scss
+++ b/src/scss/blocks/_select.scss
@@ -1,151 +1,156 @@
 .fancy-select-wrap {
-  background: white;
-  font-size: rem-calc(14);
-  line-height: 26px;
-  margin: 0;
-  width: 214px;
-  padding: 0;
-  overflow: hidden;
-  position: relative;
-  appearance: none;
-  border: 1px solid #F1F4F9;
-  box-sizing: border-box;
-  border-radius: 4px;
-
-  .selected {
-    padding: 7px 20px 7px 6px;
-    cursor: pointer;
+    background: white;
     font-size: rem-calc(14);
     line-height: 26px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 7px;
-
-    > span {
-      display: inline-block;
-      background: $c-darkgrey;
-      padding: 0 0.5rem 0 36px;
-      max-height: 30px;
-      color: $c-light;
-      line-height: 2rem;
-      border-radius: 5px;
-      position: relative;
-      transition: all 0.2s ease;
-
-      &:before {
-        content: '';
-        background: url("../img/icons/cross.svg") no-repeat center;
-        background-color: #ABB3C1;
-        font-weight: bold;
-        border-radius: 3px 0 0 3px;
-        position: absolute;
-        line-height: 2rem;
-        font-size: 18px;
-        width: 28px;
-        height: 30px;
-        left: 0;
-        top: 0;
-        opacity: 0.5;
-        text-align: center;
-        transition: all 0.2s ease;
-      }
-
-      &:hover {
-        background-color: mix(#efefef, red, 70%);
-        &:after {
-          opacity: 1;
-        }
-      }
-    }
-  }
-
-  .options {
-    display: none;
-    max-height: 250px;
-    overflow-x: hidden;
-    width: 100% ;
-    > div {
-      padding: 10px 15px;
-      cursor: pointer;
-      transition: all 0.2s ease;
-      position: relative;
-
-      &:not(.subopt) {
-        font-weight: bold;
-      }
-      &.subopt {
-        padding-left: 2rem;
-      }
-
-      &:after {
-        content: '+';
-        font-weight: bold;
-        position: absolute;
-        font-size: 20px;
-        right: 1rem;
-        top: 50%;
-        transform: translateY(-50%);
-        display: block;
-        opacity: 0;
-        transition: all 0.2s ease;
-      }
-
-      &:hover {
-        background-color: #efefef;
-
-        &:after {
-          opacity: 1;
-        }
-      }
-
-      &[data-selected='1'] {
-        background-color: mix(#efefef, #32c509, 70%);
-        &:after {
-          opacity: 1;
-          content: '✓';
-        }
-
-        &:hover {
-          background-color: mix(#efefef, red, 70%);
-          &:after {
-            content: 'x';
-          }
-        }
-      }
-    }
-  }
-
-  + select {
-    visibility: hidden;
-    position: absolute;
-  }
-
-
-
-  &:hover {
-    &:after {
-      opacity: 1;
-    }
-  }
-
-  &.expanded {
-    min-height: 300px;
-    position: absolute;
-    z-index: 1;
+    margin: 0;
+    width: 266px;
+    padding: 0;
+    overflow: hidden;
+    position: relative;
+    appearance: none;
+    border: 1px solid #f1f4f9;
+    box-sizing: border-box;
+    border-radius: 4px;
     .selected {
-      border-bottom: 1px solid #e6e6e6;
-    }
-    .options {
-      display: block;
+        padding: 7px 20px 7px 6px;
+        cursor: pointer;
+        font-size: rem-calc(14);
+        line-height: 26px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 7px;
+
+        > span {
+            display: inline-block;
+            background: $c-darkgrey;
+            padding: 0 0.5rem 0 36px;
+            max-height: 30px;
+            color: $c-light;
+            line-height: 2rem;
+            border-radius: 5px;
+            position: relative;
+            transition: all 0.2s ease;
+
+            &:before {
+                content: "";
+                background: url("../img/icons/cross.svg") no-repeat center;
+                background-color: #abb3c1;
+                font-weight: bold;
+                border-radius: 3px 0 0 3px;
+                position: absolute;
+                line-height: 2rem;
+                font-size: 18px;
+                width: 28px;
+                height: 30px;
+                left: 0;
+                top: 0;
+                opacity: 0.5;
+                text-align: center;
+                transition: all 0.2s ease;
+            }
+
+            &:hover {
+                background-color: mix(#efefef, red, 70%);
+                &:after {
+                    opacity: 1;
+                }
+            }
+        }
     }
 
-    &:after {
-      background-image: linear-gradient(
-                      to bottom right,
-                      transparent 50%,
-                      #bbb 51%
-      ),
-      linear-gradient(to bottom left, transparent 50%, #bbb 51%);
+    .options {
+        display: none;
+        max-height: 250px;
+        overflow-x: hidden;
+        width: 100%;
+        > div {
+            padding: 10px 15px;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            position: relative;
+
+            &:not(.subopt) {
+                font-weight: bold;
+            }
+            &.subopt {
+                padding-left: 2rem;
+            }
+
+            &:after {
+                content: "+";
+                font-weight: bold;
+                position: absolute;
+                font-size: 20px;
+                right: 1rem;
+                top: 50%;
+                transform: translateY(-50%);
+                display: block;
+                opacity: 0;
+                transition: all 0.2s ease;
+            }
+
+            &:hover {
+                background-color: #efefef;
+
+                &:after {
+                    opacity: 1;
+                }
+            }
+
+            &[data-selected="1"] {
+                background-color: mix(#efefef, #32c509, 70%);
+                &:after {
+                    opacity: 1;
+                    content: "✓";
+                }
+
+                &:hover {
+                    background-color: mix(#efefef, red, 70%);
+                    &:after {
+                        content: "x";
+                    }
+                }
+            }
+        }
     }
-  }
+
+    + select {
+        visibility: hidden;
+        position: absolute;
+    }
+
+    &:hover {
+        &:after {
+            opacity: 1;
+        }
+    }
+
+    &.expanded {
+        min-height: 300px;
+        position: absolute;
+        z-index: 300;
+        .fancy-select-overlay {
+            position: fixed;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            background: transparent;
+        }
+        .selected {
+            border-bottom: 1px solid #e6e6e6;
+        }
+        .options {
+            display: block;
+        }
+
+        &:after {
+            background-image: linear-gradient(
+                    to bottom right,
+                    transparent 50%,
+                    #bbb 51%
+                ),
+                linear-gradient(to bottom left, transparent 50%, #bbb 51%);
+        }
+    }
 }
